--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -5,7 +7,34 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>{% block title %}{% endblock %} &nbsp;| LapZone</title>
+        <meta name="author" content="Nikita Hubariev" />
+        <meta name="keywords" content="LapZone, Shop, Laptop, IT">
+		<meta
+			name="description"
+			content="Internet shop for selling laptops and accessories for them."
+		/>
+
+        <!-- og:title is empty and social networks will take the page title -->
+        <meta property="og:title" content="">
+        <meta property="og:site_name" content="LapZone" />
+		<meta property="og:type" content="Internet shop" />
+		<meta
+			property="og:image"
+			content="{% static 'images/site_header.webp' %}"
+		/>
+		<meta
+			property="og:url"
+			content="{{ request.build_absolute_uri }}"
+		/>
+		<meta
+			property="og:description"
+			content="Internet shop for selling laptops and accessories for them."
+		/>
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image:alt" content="LapZone header image" />
+
+		<title>{% block title %}{% endblock %} | LapZone</title>
 
 		<!-- Bootstrap5 CSS -->
 		<link
