--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -49,19 +49,122 @@
 		/>
 
 		{# My styles and CSS files #} 
-        {% block styles %}{% endblock styles %} 
+        {% block styles %}{% endblock %} 
 	</head>
 	<body>
 		<div class="wrapper d-flex flex-column min-vh-100">
 			<header></header>
 			<main></main>
 
-            <!-- Go to top button -->
-            <button title="Go to top" id="go-to-top-btn">
-                <ion-icon name="arrow-up-outline"></ion-icon>
-            </button>
+			<!-- Go to top button -->
+			<button title="Go to top" id="go-to-top-btn">
+				<ion-icon name="arrow-up-outline"></ion-icon>
+			</button>
 
-			<footer></footer>
+			<footer class="bg-white pt-5 pb-4">
+				<div class="container">
+					<div class="row d-flex justify-content-between">
+						<div class="col-6 mb-3">
+							<h5>Section</h5>
+							<ul class="nav flex-column">
+								<li class="nav-item mb-2">
+									<a href="/" class="nav-link w-25 p-0 text-muted">
+										Home
+									</a>
+								</li>
+								<li class="nav-item mb-2">
+									<a
+										target="_blank"
+										class="nav-link w-25 p-0 text-muted"
+										href="https://gubchik123.pythonanywhere.com/"
+									>
+										Blog
+									</a>
+								</li>
+								<li class="nav-item mb-2">
+									<a
+										href="{% url 'faq' %}"
+										class="nav-link w-25 p-0 text-muted"
+									>
+										FAQs
+									</a>
+								</li>
+								<li class="nav-item mb-2">
+									<a
+										href="{% url 'about' %}"
+										class="nav-link w-25 p-0 text-muted"
+									>
+										About
+									</a>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-5 offset-md-1 mb-3">
+							<form method="post">
+								<h5>Subscribe to our newsletter</h5>
+								<p>
+									Monthly digest of what's new and exciting
+									from us.
+								</p>
+								<div
+									class="d-flex flex-column flex-sm-row w-100 gap-2"
+								>
+									<label
+										for="newsletter1"
+										class="visually-hidden"
+									>
+                                        Email address
+                                    </label>
+									<input
+										id="newsletter1"
+										type="text"
+										class="form-control"
+										placeholder="Email address"
+									/>
+									<button
+										class="btn btn-primary"
+										type="button"
+									>
+										Subscribe
+									</button>
+								</div>
+							</form>
+						</div>
+					</div>
+
+					<div
+						class="d-flex justify-content-between pt-4 mt-4 border-top"
+					>
+						<p>&copy; {% now 'Y' %}</p>
+						<ul class="list-unstyled d-flex">
+							<li>
+								<a class="link-dark" href="#">
+									<ion-icon name="logo-linkedin"></ion-icon>
+								</a>
+							</li>
+							<li class="ms-3">
+								<a
+									target="_blank"
+									class="link-dark"
+									href="https://github.com/Gubchik123"
+								>
+									<ion-icon name="logo-github"></ion-icon>
+								</a>
+							</li>
+							<li class="ms-3">
+								<a
+									target="_blank"
+									class="link-dark"
+									href="https://t.me/Gubchik123/"
+								>
+									<ion-icon name="navigate-circle"></ion-icon>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</footer>
 		</div>
 
 		<!-- Bootstrap5 script -->
@@ -81,9 +184,9 @@
 			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
 		></script>
 
-        <!-- My scripts -->
-        <script src="{% static 'js/go_to_top_btn.js' %} "></script>
+		<!-- My scripts -->
+		<script src="{% static 'js/go_to_top_btn.js' %} "></script>
 
-        {% block scripts %}{% endblock %} 
+		{% block scripts %}{% endblock %}
 	</body>
 </html>
