--- a/lapzone/static/css/general.css
+++ b/lapzone/static/css/general.css
@@ -82,10 +82,11 @@ a:hover {
 main { height: 3000px; flex: 1 1 auto; }
 
 #go-to-top-btn {
-    z-index: 80;
     border: none;
     outline: none;
-    position: fixed;
+    position: sticky;
+    margin-left: auto;
+    margin-bottom: 30px;
     border-radius: 10px;
     width: 50px; height: 50px;
     right: 30px; bottom: 30px;
@@ -97,9 +98,5 @@ main { height: 3000px; flex: 1 1 auto; }
 #go-to-top-btn ion-icon { font-size: 1.5em; }
 
 /* Footer styles */
-footer { 
-    z-index: 90; 
-    position: relative;
-}
 
 /* Media queries */
