STYLE: Replace registration buttons with a person icon in the header

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -118,11 +118,14 @@
 									<!-- Theme toggler -->
 								</li>
 								<li class="nav-item">
-									<a href="#" class="btn btn-success me-2">
-										Log In
-									</a>
-									<a href="#" class="btn btn-primary">
-										Sign Up
+									<!-- TODO: make condition about link to user profile or login page -->
+									<a
+										href="#"
+										class="d-block text-decoration-none"
+									>
+										<ion-icon
+											name="person-circle"
+										></ion-icon>
 									</a>
 								</li>
 							</ul>
