--- a/lapzone/static/css/general.css
+++ b/lapzone/static/css/general.css
@@ -39,6 +39,43 @@
     background: #2f3542;
 }
 
+/* Theme toggler */
+#theme_toggler .checkbox {
+    opacity: 0;
+    position: absolute;
+}
+#theme_toggler .label {
+    background-color: #343a40;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 23px;
+    width: 48px;
+    transform: scale(1.5);
+}
+#theme_toggler .label .ball {
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 20px;
+    width: 20px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+#theme_toggler .checkbox:checked + .label .ball { transform: translateX(24px); }
+
+ion-icon[name="sunny"],
+ion-icon[name="moon"] {
+    color: yellow;
+    font-size: 0.8em;
+}
+
 /* Global styles */
 html,
 body {
@@ -77,6 +114,7 @@ a:hover {
 }
 
 /* Header styles */
+/* header ion-icon { font-size: 2.5em; } */
 
 /* Main styles */
 main { height: 3000px; flex: 1 1 auto; }
