--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -284,6 +284,7 @@
 
 		<!-- My scripts -->
 		<script src="{% static 'js/go_to_top_btn.js' %} "></script>
+		<script src="{% static 'js/toggle_theme.js' %} "></script>
 
 		{% block scripts %}{% endblock %}
 	</body>
