FEAT: Create an "about.html" page (empty)

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -48,7 +48,8 @@
 			href="{% static 'css/general.css' %} "
 		/>
 
-		{# My styles and CSS files #} {% block styles %}{% endblock %}
+		{# My styles and CSS files #} 
+        {% block styles %}{% endblock %}
 	</head>
 	<body>
 		<div class="wrapper d-flex flex-column min-vh-100">
