FEAT: Add a template block for the "Go to top" button

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -169,10 +169,12 @@
 				</div>
 			</main>
 
+            {% block go_to_top_btn %}
 			<!-- Go to top button -->
 			<button title="Go to top" id="go-to-top-btn">
 				<ion-icon name="arrow-up-outline"></ion-icon>
 			</button>
+            {% endblock go_to_top_btn %} 
 
 			<footer class="panel-bg-color pt-5 pb-4">
 				<div class="container">
