FEAT: Add the site icon and favicon
Create static/images/logo.icon
Create static/images/favicon.png
Add links to the icon and favicon in the _base.html

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -33,6 +33,10 @@
 
 		<title>{% block title %}{% endblock %} | LapZone</title>
 
+        <!-- Site icon and favicon -->
+		<link rel="icon" type="image/x-icon" href="{% static 'images/logo.ico' %}" />
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
+
 		<!-- Bootstrap5 CSS -->
 		<link
 			rel="stylesheet"
