--- a/lapzone/static/css/general.css
+++ b/lapzone/static/css/general.css
@@ -128,6 +128,10 @@ main { flex: 1 1 auto; }
 /* Footer styles */
 
 /* Media queries */
+@media screen and (max-width: 576px) { /* Bootstrap5 .sm breakpoint */
+    .search_form { margin-bottom: 20px; }
+}
+
 @media screen and (max-width: 768px) { /* Bootstrap5 .md breakpoint */
     #navbarSupportedContent {
         padding: 15px 0 15px 15px;
