FEAT: Add the link to page with all products in the header
in the _base.html

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -93,7 +93,7 @@
 
 				<nav class="navbar navbar-expand-md panel-bg-color">
 					<div class="container-fluid">
-						<a class="navbar-brand text-color" href="/">
+						<a class="navbar-brand text-color" href="{% url 'shop:products' %}">
 							<h4>LapZone</h4>
 						</a>
 
