--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -62,6 +62,12 @@
 		<div class="px-3 pb-5">
 			<h3 class="mt-5 mb-3">Categories</h3>
 			<div class="white-space-nowrap overflow-auto">
+                <a
+					href="{% url 'shop:products' %}"
+					class="btn btn-dark d-inline-block border-1 border-light me-2 fs-6 px-4 py-2"
+				>
+					All products
+				</a>
 				{% for category in categories %}
 				<a
 					href="{% url 'shop:category' category.slug %}"
