Change aciton url for search form in the _base.html

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -122,7 +122,7 @@
 									<div class="search_form d-flex justify-content-center">
                                         <form 
                                             role="search" 
-                                            action="{% url 'shop:search' %}" 
+                                            action="{% url 'shop:products' %}"
                                             class="search d-flex align-items-center"
                                         >
                                             <input
