FEAT: Add ordering info into page title in the product_list.html

--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -1,8 +1,12 @@
 {% extends '_base.html' %} 
 {% load static %} 
 
-{% block title %}{{ page_title }}{% endblock %}
-{% block content_title %}{{ page_title }}{% endblock %} 
+{% block title %}
+{{ page_title }}{% if request.GET.orderby %} ordered by {{ request.GET.orderby }} {% endif %} 
+{% endblock %}
+{% block content_title %}
+{{ page_title }}{% if request.GET.orderby %} ordered by {{ request.GET.orderby }} {% endif %} 
+{% endblock %} 
 
 {% block styles %}
 <style>
