--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -1,19 +1,15 @@
-{% extends '_base.html' %} 
-{% load static %} 
-
-{% block title %}Home{% endblock %}
-{% block content_title %}Home page{% endblock %} 
-
-{% block styles %}
+{% extends '_base.html' %} {% load static %} {% block title %}Home{% endblock %}
+{% block content_title %}Home page{% endblock %} {% block styles %}
 <style>
-    .my-carousel .carousel-item img { max-height: 70vh; }
+	.my-carousel .carousel-item img {
+		max-height: 70vh;
+	}
 
-    .white-space-nowrap { white-space: nowrap; }
+	.white-space-nowrap {
+		white-space: nowrap;
+	}
 </style>
-{% endblock styles %} 
-
-
-{% block content %}
+{% endblock styles %} {% block content %}
 <div class="row min-vh-100 px-3 d-flex justify-content-between">
 	<div class="min-vh-100 panel-bg-color col-12 p-0">
 		<!-- Carousel - start -->
@@ -62,8 +58,8 @@
 		<div class="px-3 pb-5">
 			<h3 class="mt-5 mb-3">Categories</h3>
 			<div class="white-space-nowrap overflow-auto">
-                <a
-					href="{% url 'shop:products' %}"
+				<a
+					href="{% url 'shop:product_list' %}"
 					class="btn btn-dark d-inline-block border-1 border-light me-2 fs-6 px-4 py-2"
 				>
 					All products
@@ -97,26 +93,22 @@
 				Welcome to LapZone, your one-stop-shop for laptops and
 				accessories. We offer a wide range of products to meet all your
 				computing needs. Whether you're a student, a professional, or a
-				gamer, we have something for everyone. 
-            </p>
-            <p class="fs-5">
-                At LapZone, we're
-				passionate about technology and strive to provide our customers
-				with the latest and greatest products on the market. Shop with
-				us and experience top-notch customer service, fast shipping, and
-				competitive prices.
-            </p> 
-            <p class="fs-5">
-                Thank you for choosing LapZone as your go-to
-				source for all things tech.
+				gamer, we have something for everyone.
+			</p>
+			<p class="fs-5">
+				At LapZone, we're passionate about technology and strive to
+				provide our customers with the latest and greatest products on
+				the market. Shop with us and experience top-notch customer
+				service, fast shipping, and competitive prices.
+			</p>
+			<p class="fs-5">
+				Thank you for choosing LapZone as your go-to source for all
+				things tech.
 			</p>
 		</div>
 	</div>
 </div>
-{% endblock content %} 
-
-
-{% block scripts %}
+{% endblock content %} {% block scripts %}
 <!-- Script to add "active" class selector for first carousel item -->
 <script>
 	let first_carousel_image = document.querySelectorAll(".carousel-item")[0];
