--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -93,7 +93,10 @@
 
 				<nav class="navbar navbar-expand-md panel-bg-color">
 					<div class="container-fluid">
-						<a class="navbar-brand text-color" href="{% url 'shop:products' %}">
+						<a 
+                            class="navbar-brand text-color" 
+                            href="{% url 'shop:product_list' %}"
+                        >
 							<h4>LapZone</h4>
 						</a>
 
@@ -122,7 +125,7 @@
 									<div class="search_form d-flex justify-content-center">
                                         <form 
                                             role="search" 
-                                            action="{% url 'shop:products' %}"
+                                            action="{% url 'shop:product_list' %}"
                                             class="search d-flex align-items-center"
                                         >
                                             <input
